[project]
name = "w2w"
version = "0.1.0"
description = "Word to World models: Create world models from natural language descriptions and run predictive simulations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyro-ppl>=1.9.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "datasets>=2.14.0",
    "tokenizers>=0.13.0",
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "ipykernel>=6.25.0",
    "ipywidgets>=8.1.0",
]
